[gd_scene load_steps=44 format=3 uid="uid://bab4r4xf061bi"]

[ext_resource type="Script" path="res://character/character.gd" id="1_r3su1"]
[ext_resource type="Texture2D" uid="uid://yw7ov3dfsvy8" path="res://assets/images/Player/characterSprites.png" id="2_etx63"]
[ext_resource type="Texture2D" uid="uid://b22v8b11jlbxr" path="res://assets/images/Player/pixil-layer-Layer 1(2).png" id="3_bfyli"]
[ext_resource type="PackedScene" uid="uid://cocjw7gnnr51j" path="res://UI/pause_menu.tscn" id="3_m5xnx"]
[ext_resource type="Script" path="res://UI/DeathMenu.gd" id="5_o4su7"]
[ext_resource type="Theme" uid="uid://cvl1hnc83iori" path="res://UI/HealthBar.tres" id="5_xmafd"]
[ext_resource type="Script" path="res://UI/HealthBar.gd" id="6_ddwbj"]
[ext_resource type="AudioStream" uid="uid://bh28ami1tllvw" path="res://assets/audio/sfx/BellOfDeath.mp3" id="6_dqts4"]
[ext_resource type="AudioStream" uid="uid://bd28djjvuyacu" path="res://assets/audio/sfx/Kick1.mp3" id="8_rnuqw"]
[ext_resource type="AudioStream" uid="uid://crcbvvtgv3fxb" path="res://assets/audio/sfx/Kick2.mp3" id="9_nomkn"]
[ext_resource type="AudioStream" uid="uid://c6d5orxinf8w2" path="res://assets/audio/sfx/Shock.wav" id="10_ldsoq"]
[ext_resource type="AudioStream" uid="uid://ylr58e0n237x" path="res://assets/audio/sfx/Jump.mp3" id="11_aa8b1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_n27xy"]
atlas = ExtResource("2_etx63")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xpqks"]
atlas = ExtResource("2_etx63")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_o47b0"]
atlas = ExtResource("3_bfyli")
region = Rect2(64, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7oyoc"]
atlas = ExtResource("3_bfyli")
region = Rect2(80, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_42ddl"]
atlas = ExtResource("2_etx63")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tnl3o"]
atlas = ExtResource("2_etx63")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qngrn"]
atlas = ExtResource("2_etx63")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qmb3a"]
atlas = ExtResource("2_etx63")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_v87ac"]
atlas = ExtResource("2_etx63")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_a4da0"]
atlas = ExtResource("2_etx63")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vmmme"]
atlas = ExtResource("2_etx63")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_07tmk"]
atlas = ExtResource("2_etx63")
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xpgek"]
atlas = ExtResource("2_etx63")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ia66i"]
atlas = ExtResource("2_etx63")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_iewhx"]
atlas = ExtResource("2_etx63")
region = Rect2(64, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_brb11"]
atlas = ExtResource("2_etx63")
region = Rect2(80, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_t06sm"]
atlas = ExtResource("3_bfyli")
region = Rect2(32, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3p4pj"]
atlas = ExtResource("3_bfyli")
region = Rect2(48, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_eb1jj"]
atlas = ExtResource("2_etx63")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7fhol"]
atlas = ExtResource("2_etx63")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4r2cj"]
atlas = ExtResource("2_etx63")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_12yuh"]
atlas = ExtResource("2_etx63")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tgk8e"]
atlas = ExtResource("2_etx63")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1oymb"]
atlas = ExtResource("2_etx63")
region = Rect2(64, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xenu7"]
atlas = ExtResource("2_etx63")
region = Rect2(80, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_c0jho"]
atlas = ExtResource("2_etx63")
region = Rect2(96, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dlefm"]
atlas = ExtResource("2_etx63")
region = Rect2(112, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0pggj"]
atlas = ExtResource("2_etx63")
region = Rect2(0, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_xsqva"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n27xy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xpqks")
}],
"loop": true,
"name": &"fallingMotion",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o47b0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7oyoc")
}],
"loop": true,
"name": &"fallingNeutral",
"speed": 4.0
}, {
"frames": [{
"duration": 3.0,
"texture": SubResource("AtlasTexture_42ddl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tnl3o")
}],
"loop": true,
"name": &"idle",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qngrn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qmb3a")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_v87ac")
}],
"loop": false,
"name": &"kick",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a4da0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vmmme")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_07tmk")
}],
"loop": false,
"name": &"kick2",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xpgek")
}],
"loop": false,
"name": &"kick2Return",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ia66i")
}],
"loop": false,
"name": &"kickReturn",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iewhx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_brb11")
}],
"loop": true,
"name": &"onWall",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t06sm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3p4pj")
}],
"loop": true,
"name": &"onWallUp",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eb1jj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7fhol")
}],
"loop": true,
"name": &"risingMotion",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4r2cj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_12yuh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tgk8e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1oymb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xenu7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c0jho")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dlefm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0pggj")
}],
"loop": true,
"name": &"run",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tiidf"]
size = Vector2(3.2, 8.8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jvi28"]
size = Vector2(3.2, 11)

[node name="player" type="CharacterBody2D"]
collision_mask = 6
script = ExtResource("1_r3su1")

[node name="PlayerSprites" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_xsqva")
animation = &"fallingNeutral"

[node name="PlayerHitbox" type="CollisionShape2D" parent="."]
position = Vector2(0, 1.5)
scale = Vector2(1.25, 1.25)
shape = SubResource("RectangleShape2D_tiidf")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0.5, 0)
zoom = Vector2(2, 2)
limit_left = 0
limit_bottom = 1088
position_smoothing_enabled = true

[node name="CanvasLayer" type="CanvasLayer" parent="Camera2D"]

[node name="PauseMenu" parent="Camera2D/CanvasLayer" instance=ExtResource("3_m5xnx")]
visible = false

[node name="CenterContainer" parent="Camera2D/CanvasLayer/PauseMenu" index="0"]
process_mode = 3

[node name="DeathMenu" type="Control" parent="Camera2D/CanvasLayer"]
process_mode = 3
top_level = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_o4su7")

[node name="PanelContainer" type="PanelContainer" parent="Camera2D/CanvasLayer/DeathMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="Camera2D/CanvasLayer/DeathMenu/PanelContainer"]
process_mode = 3
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="Camera2D/CanvasLayer/DeathMenu/PanelContainer/CenterContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Camera2D/CanvasLayer/DeathMenu/PanelContainer/CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="Camera2D/CanvasLayer/DeathMenu/PanelContainer/CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="Camera2D/CanvasLayer/DeathMenu/PanelContainer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 64
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Camera2D/CanvasLayer/DeathMenu/PanelContainer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Respawn" type="Button" parent="Camera2D/CanvasLayer/DeathMenu/PanelContainer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 3
text = "Respawn"

[node name="MainMenu" type="Button" parent="Camera2D/CanvasLayer/DeathMenu/PanelContainer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Main Menu"

[node name="DeathNoise" type="AudioStreamPlayer2D" parent="Camera2D/CanvasLayer/DeathMenu"]
stream = ExtResource("6_dqts4")

[node name="HealthBar" type="ProgressBar" parent="Camera2D/CanvasLayer"]
offset_left = 16.0
offset_top = 16.0
offset_right = 336.0
offset_bottom = 48.0
size_flags_horizontal = 0
theme = ExtResource("5_xmafd")
max_value = 20.0
step = 1.0
value = 5.0
show_percentage = false
script = ExtResource("6_ddwbj")

[node name="CenterContainer" type="CenterContainer" parent="Camera2D/CanvasLayer/HealthBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HealthValue" type="Label" parent="Camera2D/CanvasLayer/HealthBar/CenterContainer"]
layout_mode = 2
text = "10"

[node name="raycastLeft" type="RayCast2D" parent="."]
target_position = Vector2(-3, 0)
collision_mask = 4

[node name="raycastRight" type="RayCast2D" parent="."]
target_position = Vector2(3, 0)
collision_mask = 4

[node name="hazardDetection" type="Area2D" parent="."]
collision_mask = 8

[node name="HDHitbox" type="CollisionShape2D" parent="hazardDetection"]
position = Vector2(0, 1.5)
scale = Vector2(1.25, 1)
shape = SubResource("RectangleShape2D_jvi28")

[node name="enemyDetection" type="Area2D" parent="."]
collision_mask = 16

[node name="EDHitbox" type="CollisionShape2D" parent="enemyDetection"]
position = Vector2(0, 1.5)
scale = Vector2(1.25, 1)
shape = SubResource("RectangleShape2D_jvi28")

[node name="EDLeftBottom" type="RayCast2D" parent="enemyDetection"]
position = Vector2(0, 6)
target_position = Vector2(-5, 0)
collision_mask = 16

[node name="EDLeftTop" type="RayCast2D" parent="enemyDetection"]
position = Vector2(0, -3)
target_position = Vector2(-5, 0)
collision_mask = 16

[node name="EDRightBottom" type="RayCast2D" parent="enemyDetection"]
position = Vector2(0, 6)
target_position = Vector2(5, 0)
collision_mask = 16

[node name="EDRightTop" type="RayCast2D" parent="enemyDetection"]
position = Vector2(0, -3)
target_position = Vector2(5, 0)
collision_mask = 16

[node name="Sounds" type="Node" parent="."]

[node name="Kick" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("8_rnuqw")

[node name="Kick2" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("9_nomkn")

[node name="Jump" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("11_aa8b1")
volume_db = 10.0

[node name="Shock" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("10_ldsoq")

[connection signal="animation_finished" from="PlayerSprites" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="pressed" from="Camera2D/CanvasLayer/DeathMenu/PanelContainer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Respawn" to="Camera2D/CanvasLayer/DeathMenu" method="_on_respawn_pressed" flags=18]
[connection signal="pressed" from="Camera2D/CanvasLayer/DeathMenu/PanelContainer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/MainMenu" to="Camera2D/CanvasLayer/DeathMenu" method="_on_main_menu_pressed" flags=18]
[connection signal="body_entered" from="hazardDetection" to="." method="_on_hazard_detection_body_entered"]
[connection signal="body_entered" from="enemyDetection" to="." method="_on_enemy_detection_body_entered"]

[editable path="Camera2D/CanvasLayer/PauseMenu"]
